[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-healthy"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Christian Hartung", email = "christian.hartung@olist.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
]
dependencies = [
  "django>=4.2",
]

[project.urls]
Documentation = "https://github.com/olist/django-healthy#readme"
Issues = "https://github.com/olist/django-healthy/issues"
Source = "https://github.com/olist/django-healthy"

[tool.hatch.build.targets.wheel]
packages = ["src/healthy"]

[tool.hatch.version]
path = "src/healthy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-asyncio",
  "pytest-django",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/healthy tests}"

[tool.coverage.run]
source_pkgs = ["healthy", "tests"]
branch = true
parallel = true
omit = [
  "src/healthy/__about__.py",
]

[tool.coverage.paths]
healthy = ["src/healthy", "*/django-healthy/src/healthy"]
tests = ["tests", "*/django-healthy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src"]
